--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div>
-		<button class="s-btn" id="btn">submit</button>
+		<button type="submit" class="s-btn" id="btn">submit</button>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
